nfs-volume.yaml
# apt install nfs-kernel-server portmap
# kubectl apply -f nfs-volume.yaml
# kubectl exec -it nfs-server-pod -- sh
#   ls /exports
#   cat /etc/exports
#   ps aux | grep nfsd
#   ps aux | grep 'portman'
#   ps aux | grep 'mountd'
#   service nfs-kernel-server status   # Make sure nfs server is running
#
# kubectl run -it --rm --image busybox:latest dns-test-pod --restart=Never --image-pull-policy=IfNotPresent
#   nslookup nfs-server-pod
#   ping nfs-server-pod
#   ping nfs-server-pod_ip      # kubectl get all -o wide: show the IP of nfs-server-pod
#
# kubectl exec -it pod-using-nfs -- sh
#   cat /var/nfs/dates.txt
#
---
# Create a service to expose the NFS server
# to pods inside the cluster.
kind: Service
apiVersion: v1
metadata:
  name: nfs-service
spec:
  selector:
    role: nfs
  ports:
    # Open the ports required by the NFS server
    # Port 2049 for TCP
    - name: tcp-2049
      port: 2049
      protocol: TCP

    # Port 111 for UDP
    - name: udp-111
      port: 111
      protocol: UDP

---
# Run the NFS server image in a pod that is
# exposed by the service.

kind: Pod
apiVersion: v1
metadata:
  name: nfs-server-pod
  labels:
    role: nfs
spec:
  containers:
    - name: nfs-server-container
      image: cpuguy83/nfs-server
      imagePullPolicy: IfNotPresent
      securityContext:
        privileged: true
      args:
        # Pass the paths to share to the Docker image
        - /exports

---
kind: Pod
apiVersion: v1
metadata:
  name: pod-using-nfs
spec:
  # Add the server as an NFS volume for the pod
  volumes:
    - name: nfs-volume
      nfs:
        # URL for the NFS server: nfs://nfs_server_ip/mnt/nfs/
        # server: nfs_server_ip
        # path: /mnt/nfs
        server: nfs_service_cluster_ip     # kubectl get all -o wide: show the CLUSTER_IP of nfs_service
        path: /

  # In this container, we'll mount the NFS volume
  # and write the date to a file inside it.
  containers:
    - name: app
      image: alpine
      imagePullPolicy: IfNotPresent

      # Mount the NFS volume in the container
      volumeMounts:
        - name: nfs-volume
          mountPath: /var/nfs

      # Write to a file inside our NFS
      command: ["/bin/sh"]
      args: ["-c", "while true; do date >> /var/nfs/dates.txt; sleep 5; done"]
